<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="@dimen/min_suggestion_page_height"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="81dp">

        <android.support.v7.widget.CardView
            android:id="@+id/suggestion4CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/suggestion3CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/suggestion4TextView"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/suggestion_button_title_4"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/suggestion4ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/suggestion_item_height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_bread" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/suggestion3CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/suggestion4CardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/suggestion3TextView"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/suggestion_button_title_3"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/suggestion3ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/suggestion_item_height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_meat" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/suggestion1CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/suggestion3CardView"
            app:layout_constraintEnd_toStartOf="@+id/suggestion2CardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/suggestion1TextView"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/suggestion_button_title_1"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/suggestion1ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/suggestion_item_height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_fruit" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/suggestion2CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/suggestion1CardView"
            app:layout_constraintTop_toTopOf="@+id/suggestion1CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/suggestion2TextView"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/suggestion_button_title_2"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/suggestion2ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/suggestion_item_height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_vegetables" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/allProductsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/suggestion1CardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/allProductsTextView"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/all_products_button_title"
                    android:textAlignment="viewStart" />

                <ImageView
                    android:id="@+id/allProductsImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/all_products_item_height"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_grocery"
                    tools:layout_editor_absoluteX="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>